fix image center alignment in blog

--- a/blog/wp-content/themes/twentyfourteen-child/style.css
+++ b/blog/wp-content/themes/twentyfourteen-child/style.css
@@ -56,3 +56,7 @@
 .edit-link:before {
 	content: "- ";
 }
+
+.aligncenter {
+	margin: 10px auto;
+}
